--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           terraform init
       - name: 'plan'
         run: |
-          terraform plan -var="oidc_request_token=$ACTIONS_ID_TOKEN_REQUEST_TOKEN" -var="oidc_request_url=$ACTIONS_ID_TOKEN_REQUEST_URL" -var="githubsha=${GITHUB_SHA::6}"
+          terraform plan -var="oidc_request_token=$ACTIONS_ID_TOKEN_REQUEST_TOKEN" -var="oidc_request_url=$ACTIONS_ID_TOKEN_REQUEST_URL" -var="githubsha=${GITHUB_SHA::6}" -var="githubref=${{ github.ref }}" -var="githubrepositoryurl=${{ github.repostioryUrl }}"
       - name: 'apply'
         run: |
-          terraform apply -var="oidc_request_token=$ACTIONS_ID_TOKEN_REQUEST_TOKEN" -var="oidc_request_url=$ACTIONS_ID_TOKEN_REQUEST_URL" -var="githubsha=${GITHUB_SHA::6}" -auto-approve
+          terraform apply -var="oidc_request_token=$ACTIONS_ID_TOKEN_REQUEST_TOKEN" -var="oidc_request_url=$ACTIONS_ID_TOKEN_REQUEST_URL" -var="githubsha=${GITHUB_SHA::6}" -var="githubref=${{ github.ref }}" -var="githubrepositoryurl=${{ github.repostioryUrl }}" -auto-approve
